--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     margin: 0 auto;
-    /*no se como hacer que el fondo de los laterales sea del mismo color que en la imagen*/
+    font-family: sans-serif;
 }
 
 .header {
@@ -16,7 +16,7 @@ body {
 .top-section {
     display: flex;
     background-color: #1F2937;
-    padding: 5% 30% 5% 30%;
+    padding: 5% 30%;
 }
 
 a {
@@ -47,8 +47,14 @@ a {
     flex: 1;
     flex-direction: column;
     width: 50%;
-    padding-right: 20px;
 }
+
+.left-panel-text {
+    display: flex;
+    flex-direction: column;
+    padding-right: 15%;
+}
+
 
 .right-panel {
     display: flex;
@@ -64,22 +70,21 @@ a {
     flex-direction: column;
     align-items: center;
     gap: 20px;
-    padding: 10px 30%;
+    padding: 1% 30% 4% 30%;
 }
 
 .blue-border {
-    border: 3px solid  #3882F6;
-    border-radius: 8px;
+    border: 4px solid  #3882F6;
+    border-radius: 12px;
     aspect-ratio: 1/1;
-    width: 100%;
+    width: 130%;
 }
 
 .boxes {
 
     display: flex;
     justify-content: center;
-    gap: 40px;
-    /*Esto no esta centrandose por algun motivo*/
+    gap: 100px;
 }
 
 .box {
@@ -87,20 +92,20 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 100px;
+    width: 130px;
 }
 
 .quote {
     display: flex;
     flex-direction: column;
-    padding: 4% 30%;
+    padding: 4% 34%;
     background-color: #E5E7EB;
 }
 
 .god-name {
     display: flex;
     justify-content: end;
-    padding: 0 80px;
+    padding: 0 40px;
     font-size: 24px;
     font-weight: bold;
     color: #1F2937;
@@ -116,7 +121,7 @@ a {
 .bottom-section {
     display: flex;
     justify-content: center;
-    padding: 0 30%;
+    padding: 0 30% 3% 30%;
 }
 
 .blue-banner {
@@ -125,15 +130,22 @@ a {
     background-color: #3882F6;
     justify-content: center;
     align-items: center;
-    width: 80%;
-    gap: 100px;
-    margin-top: 80px;
+    width: 75%;
+    gap: 15%;
+    margin-top: 8%;
     border-radius: 8px;
-    padding: 1% 60px;
+    padding: 3% 14%;
 }
 
 .white-border {
-    border: 1px solid  #E5E7EB;
+    border: 2px solid  #E5E7EB;
+}
+
+.footer {
+    display: flex;
+    background-color: #1F2937;
+    justify-content: center;
+    padding: 1.5% 0;
 }
 
 .white-text {
