--- a/style.css
+++ b/style.css
@@ -77,14 +77,14 @@ a {
     border: 4px solid  #3882F6;
     border-radius: 12px;
     aspect-ratio: 1/1;
-    width: 130%;
+    width: 100%;
 }
 
 .boxes {
 
     display: flex;
     justify-content: center;
-    gap: 100px;
+    gap: 5%;
 }
 
 .box {
@@ -92,7 +92,7 @@ a {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    width: 130px;
+    width: 200px;
 }
 
 .quote {
@@ -114,7 +114,7 @@ a {
 .god-text {
     font-size: 36px;
     font-style: italic;
-    font-weight: 10;
+    font-weight: lighter;
     color: #1F2937;
 }
 
